--- a/src/main/java/com/qa/crmpro/config/config.properties
+++ b/src/main/java/com/qa/crmpro/config/config.properties
@@ -2,4 +2,6 @@ browser = firefox
 url = https://ui.cogmento.com/
 username = reshma4a1@gmail.com
 password = test@123
-headless =
+highlight = true
+headless = 
+
